--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
                 <img src="./images&videos/Forbidden_Memes__1_-removebg-preview.png" height="45px">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                   
-                  <li><a href="./recipe.html" class="nav-link px-2 text-white">Home</a></li>
+                  <li><a href="./index.html" class="nav-link px-2 text-white">Home</a></li>
                   <li><a href="./home.html" class="nav-link px-2 text-white">Recipies</a></li>
                   <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
                   <li><a href="#" class="nav-link px-2 text-white">About</a></li>
