--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container headpos">
                 <header class="d-flex flex-wrap justify-content-center py-3">
                   <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="./recipe.html" class="nav-link" aria-current="page">Home</a></li>
+                    <li class="nav-item"><a href="./index.html" class="nav-link" aria-current="page">Home</a></li>
                     <li class="nav-item"><a href="./home.html" class="nav-link">Recipies</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Reviews</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">About</a></li>
